Removed tabs